force-app/main/default/objects/MAS_GIC_Log__c/MAS_GIC_Log__c.object-meta.xml
<CustomObject>
    <description>Execution log for a Mass Action Scheduler run: one summary record per run plus optional per-batch error records.</description>
    <label>MAS Log</label>
    <pluralLabel>MAS Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>