force-app/main/default/objects/MAS_GIC_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Id</label>
    <type>Text</type>
    <length>18</length>
    <description>AsyncApexJob Id of the batch run this log belongs to.</description>
</CustomField>