force-app/main/default/objects/MAS_GIC_Log__c/fields/Long_Message__c.field-meta.xml
<CustomField>
    <fullName>Long_Message__c</fullName>
    <label>Long Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>