force-app/main/default/objects/MAS_GIC_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Log__c</fullName>
    <label>Parent Log</label>
    <type>Lookup</type>
    <referenceTo>MAS_GIC_Log__c</referenceTo>
    <relationshipName>Child_Logs</relationshipName>
    <relationshipLabel>Child Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a per-batch detail log to its run summary log.</description>
</CustomField>